--- a/JQUERY/jquery.html
+++ b/JQUERY/jquery.html
@@ -13,6 +13,10 @@
            font-size: 1.5em;
            font-family: sans-serif;
         }
+        img {
+           width: 100; 
+           height: 100;
+        }
     </style>
 </head>
 <body>
@@ -20,5 +24,6 @@
    <script>
        $("p").css("background-color", "lemonchiffon");
    </script>
+  
 </body>
 </html>
